-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.1
-
None
-
Windows 7 x64.
Build with mingw32.
-
8adca56674bd51a39b278fb08f270624c825b002
QGLContext::bindTexture (if calling with QGLContext::MipmapBindOption) does not generates mipmaps due to it checks
qgl_extensions()->hasOpenGLExtension(QOpenGLExtensions::GenerateMipmap)
which always returns false.
Because it calls qt_gl_resolve_extensions() where checks some extensions and there is no checking for "GL_SGIS_generate_mipmap" extension and therefore bit flag set for QOpenGLExtensions::GenerateMipmap